--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,12 +110,12 @@ input, select, textarea {
 		-webkit-transition: color .2s ease-in-out;
 		-ms-transition: color .2s ease-in-out;
 		transition: color .2s ease-in-out;
-		color: #43B3E0;
+		color: #cc8f94;
 		text-decoration: underline;
 	}
 
 		a:hover {
-			color: #43bff0 !important;
+			color: #cc8f94 !important;
 		}
 
 		a img {
@@ -1686,7 +1686,7 @@ input, select, textarea {
 		text-shadow: -1px -1px 0.5px rgba(0, 0, 0, 0.5);
 		overflow: hidden;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.75);
-		background-color: #43B3E0;
+		background-color: #cc8f94;
 		padding: 1em 2.35em 1em 2.35em;
 		font-size: 1.1em;
 		max-width: 24em;
@@ -1697,7 +1697,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #43bff0;
+			background-color: #881625;
 			color: #fff !important;
 		}
 
@@ -1706,7 +1706,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background-color: #3BA8D3;
+			background-color: #cc8f94;
 			top: 1px;
 		}
 
@@ -1820,7 +1820,7 @@ input, select, textarea {
 				}
 
 				ul.social li a.fa-twitter {
-					background-color: #2DAAE4;
+					background-color: #cc8f94;
 				}
 
 				ul.social li a.fa-facebook-f {
@@ -2009,8 +2009,9 @@ input, select, textarea {
 		}
 
 		.wrapper.style4 {
-			background-color: #303030;
+			background-color: #881625;
 			color: #999;
+			/*text-shadow: -1px -1px 0px #181818;*/
 			text-shadow: -1px -1px 0px #181818;
 		}
 
@@ -2036,7 +2037,8 @@ input, select, textarea {
 /* Nav */
 
 	#nav {
-		background-color: #282828;
+		/*background-color: #282828;*/
+		background-color: #881625;
 		text-align: center;
 		position: fixed;
 		left: 0;
