--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -273,7 +273,7 @@ input, select, textarea {
 
 			.container {
 				width: 100%;
-				max-width: calc(100% - 30px);
+				max-width: calc(120% - 50px);
 			}
 
 				.container.medium {
@@ -1749,7 +1749,7 @@ input, select, textarea {
 
 	ul {
 		list-style: disc;
-		padding-left: 1em;
+		padding-left: 0.25em;
 	}
 
 		ul li {
@@ -2246,6 +2246,7 @@ input, select, textarea {
 
 			body {
 				padding-top: 44px;
+				padding-left: 20px;
 			}
 
 			body, input, textarea, select {
